--- a/www/css/main.css
+++ b/www/css/main.css
@@ -53,7 +53,7 @@ body {
 
 .plot-title,
 .plot-subtitle {
-  font-family: Arsenal, sans-serif;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   padding-left: 75px;
 }
 
